fixed about section on smaller screens using media rule

--- a/src/App.css
+++ b/src/App.css
@@ -93,24 +93,60 @@ h1 {
 
 /* ABOUT SECTION */
 
-.AboutImage {
-  border-radius: 50%;
-  height: 200px;
-  flex: 33%;
-  width: 33%;
-  padding: 0 10px;
+@media only screen and (min-width: 775px) {
+  .GreaterThan775 {
+    display: flex;
+  }
+
+  .LessThan775 {
+    display: none;
+  }
+
+  .AboutImage {
+    border-radius: 50%;
+    height: 200px;
+    flex: 33%;
+    max-width: 33%;
+    padding: 0 10px;
+  }
+
+  .AboutImageRow {
+    flex-wrap: wrap;
+    padding: 0px 10px;
+  }
+
+  .AboutImageCaption {
+    max-width: 33%;
+    padding: 10px 10px;
+    text-align: center;
+  }
 }
 
-.AboutImageRow {
-  display: flex;
-  flex-wrap: wrap;
-  padding: 0 10 px;
+@media only screen and (max-width: 775px) {
+  .GreaterThan775 {
+    display: none;
+  }
+
+  .LessThan775 {
+    display: block;
+  }
+
+  .AboutImage {
+    border-radius: 50%;
+    max-width: 67%;
+    height: 200px;
+    padding: 0px 10px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+  }
+
+  .AboutImageCaption {
+    padding: 10px 10px;
+    max-width: 67%;
+    text-align: center;
+    margin: 0 auto;
+  }
 }
 
-.AboutImageCaption {
-  flex: 33%;
-  width: 33%;
-  padding: 10px 10px;
-  text-align: center;
-}
 /* CSS @media Rules */
